--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -1,5 +1,21 @@
+html{height:100%}
+
+body{
+	height: 100%;
+
+}
+
+.container-narrow{
+	height:100%;
+}
+
 .jumbotron{
 	text-align: center;
+	height:100%;
+}
+
+#j-content{
+	padding-top:50px;
 }
 
 iframe{
@@ -30,8 +46,8 @@ iframe{
 
 #game-box{
 	margin-top:30px;
-	padding-top:20px;
-	padding-bottom:20px;
+	padding-top:70px;
+	padding-bottom:50px;
 	border-style: solid;
 	border-color: black;
 	border-width: 2px;
