--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -14,6 +14,7 @@ h2{font-size: 50px;}
 #decrease{color:red;}
 #neutral{color:grey;}
 #orange{color:orange;}
+#fuchsia{color:fuchsia;}
 
 a:hover{text-decoration: none;}
 
