updated game box background color

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -87,5 +87,5 @@ text-align: center;
 	border-style: solid;
 	border-color: black;
 	border-width: 2px;
-	background-color: white;
+	background-color: steelblue;
 }
